[package]
name = "graphics_tester"
version = "0.1.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
description = "Graphics tester"
publish = false

[dependencies]
pixels-graphics-lib = { version = "0.18.0", default-features = false, features = ["window_prefs"] }
anyhow = "1.0.81"