[package]
name = "graphics_tester"
version = "0.1.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
description = "Graphics tester"
publish = false

[dependencies]
pixels-graphics-lib = { version = "0.20.1", default-features = false, features = ["window_prefs", "softbuffer"] }
anyhow = "1.0.89"
ron = "0.8.0"